@@ -9,6 +9,7 @@ usable \
 unusable \
   linux-image-2.6-iop32x \
   linux-image-2.6-netwinder \
+  linux-image-2.6-orion \
   linux-image-2.6-rpc \
   linux-image-2.6-s3c2410 \
   linux-image-2.6.18-4-iop32x \
