@@ -2,6 +2,7 @@ base-installer (1.89) UNRELEASED; urgency=low
 
   [ Martin Michlmayr ]
   * Add a cpuinfo file from QNAP TS-109 (orion) to the test suite.
+  * Mark the orion flavour as unusable on non-Orion systems.
 
  -- Martin Michlmayr <tbm@cyrius.com>  Sat, 16 Feb 2008 10:54:15 +0100
 
